# symkeeper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  symkeeper.toml.example
.github/workflows/: release-plz.yml  test.yml
fixtures/: config_1.toml  config_2.toml  duplicate_symlinks.toml
src/: cmds.rs  config.rs  error.rs  fs.rs  lock_file.rs  main.rs  path_ext.rs  prelude.rs  symlink.rs  sync.rs
src/cmds/: clean.rs  sync.rs
