[package]
name = "symkeeper"
description = "Symlink management tool"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
thiserror = "2.0.17"
toml = "0.9.8"
